[package]
name = "my-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = "0.19.0"
futures-channel = "0.3.28"
futures-util = "0.3.28"
serde_json = "1.0.97"
serde = { version = "1.0.164", features = ["derive"] }

